--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<html lang="en">
+	<head>
+		<meta charset="etf-8"/>
+		<link rel="stylesheet" href="style.css" type="text/css"/>
+		<title>template.html</title>
+	</head>
+	
+	<body>
+			<h1>Welcome to my Portfolio</h1>
+	</body>
+</html>
