--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Jackson
-            <span class="text-primary">Krogh</span>
+          <h1 class="mb-0">Ryan
+            <span class="text-primary">Christensen</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+          <div class="subheading mb-5">390E 300S Apt 5 · Logan, UT 84321 · (435) 660-6987 ·
+            <a href="mailto:name@email.com">ryanc3412@gmail.com</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">As a Junior computer science student at Utah State University, I am passionate about developing innovative software. I have developed a strong understanding of data structures and algorithms through my coursework and personal study. I have skills in a variety of programming languages, including Python, Java, and Kotlin. I am also proficient in using Git and GitHub for code management and collaboration. </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
