--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <p class="mb-5">As a Junior computer science student at Utah State University, I am passionate about developing innovative software. I have developed a strong understanding of data structures and algorithms through my coursework and personal study. I have skills in a variety of programming languages, including Python, Java, and Kotlin. I am also proficient in using Git and GitHub for code management and collaboration. </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="www.linkedin.com/in/ryan-k-christensen">
+              <a href="https://www.linkedin.com/in/ryan-k-christensen/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
