--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Utah State University</h3>
-              <div class="subheading mb-3">Logan, Utah  -  Bachelor of Science</div>
+              <div class="subheading mb-3">Logan, Utah · Bachelor of Science</div>
               <div>Computer Science</div>
               <p>GPA: 3.56</p>
             </div>
