--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Juab High School</h3>
-              <div class="subheading mb-3">Nephi, Utah</div>
+              <div class="subheading mb-3">Nephi, Utah · High School Diploma</div>
               <p>GPA: 3.96</p>
             </div>
             <div class="resume-date text-md-right">
