--- a/index.html
+++ b/index.html
@@ -168,40 +168,22 @@
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
 
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+          <div class="subheading mb-3">Technical Skills</div>
           <ul class="list-inline list-icons">
-            <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
+            <li>
+              Python
             </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
+            <li>
+              Java
             </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
+            <li>
+              Kotlin
             </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-jquery"></i>
+            <li>
+              Django
             </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
+            <li>
+              Git
             </li>
           </ul>
 
