Update css of technical skills

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="subheading mb-5">390E 300S Apt 5 · Logan, UT 84321 · (435) 660-6987 ·
             <a href="mailto:name@email.com">ryanc3412@gmail.com</a>
           </div>
-          <p class="mb-5">As a Junior computer science student at Utah State University, I am passionate about developing innovative software. I have developed a strong understanding of data structures and algorithms through my coursework and personal study. I have skills in a variety of programming languages, including Python, Java, and Kotlin. I am also proficient in using Git and GitHub for code management and collaboration. </p>
+          <p class="mb-5">As a Junior computer science student at Utah State University, I am passionate about developing innovative software. I have a strong understanding of data structures and algorithms, gained through my coursework and self-study. I have skills in a variety of programming languages, including Python, Java, and Kotlin. I am also proficient in using Git and GitHub for code management and collaboration. </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/ryan-k-christensen/">
@@ -171,18 +171,23 @@
           <div class="subheading mb-3">Technical Skills</div>
           <ul class="list-inline list-icons">
             <li>
+              <i class="fa-li fa fa-check"></i>
               Python
             </li>
             <li>
+              <i class="fa-li fa fa-check"></i>
               Java
             </li>
             <li>
+              <i class="fa-li fa fa-check"></i>
               Kotlin
             </li>
             <li>
+              <i class="fa-li fa fa-check"></i>
               Django
             </li>
             <li>
+              <i class="fa-li fa fa-check"></i>
               Git
             </li>
           </ul>
