Update soft skills

--- a/index.html
+++ b/index.html
@@ -172,40 +172,38 @@
           <ul class="list-inline list-icons">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Python
-            </li>
+              Python</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Java
-            </li>
+              Java</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Kotlin
-            </li>
+              Kotlin</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Django
-            </li>
+              Django</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Git
-            </li>
+              Git</li>
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">Soft/Other Skills</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Agile Development & Scrum</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              Communication</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              Leadership</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              Teamwork</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Timely</li>
           </ul>
         </div>
       </section>
