--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Technical Skills</div>
-          <ul class="list-inline list-icons">
+          <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
               Python</li>
