--- a/index.html
+++ b/index.html
@@ -210,9 +210,17 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <h2 class="mb-5">Projects/Other</h2>
+          <div class="subheading mb-3">Python</div>
+          <p>Program that generates a March Madness bracket from three options: random, seed-based probability, or historical probability.</p>
+          <div class="subheading mb-3">Kotlin</div>
+          <p>Android Application following MVVM design pattern that allows creation of a daily workout plan.</p>
+          <div class="subheading mb-3">Django</div>
+          <p>Project that implements a unit conversion API and utilizes a third-party API to convert weight in gold to USD.</p>
+          <div class="subheading mb-3">Competitions</div>
+          <p>Participant in Lucid Programming Competition 2022 & 2023 with students from all across the country including BYU, Duke, UNC, and more</p>
+          <div class="subheading mb-3">Future Studies</div>
+          <p>Anticipate study of Machine Learning and Advanced Algorithms in Spring Semester.</p>
         </div>
       </section>
 
