--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="subheading mb-3">Competitions</div>
           <p>Participant in Lucid Programming Competition 2022 & 2023 with students from all across the country including BYU, Duke, UNC, and more</p>
           <div class="subheading mb-3">Future Studies</div>
-          <p>Anticipate study of Machine Learning and Advanced Algorithms in Spring Semester.</p>
+          <p>Currently studying compiler construction, algorithms under uncertainty, and scientific computing.</p>
         </div>
       </section>
 
