--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <p>Project that implements a unit conversion API and utilizes a third-party API to convert weight in gold to USD.</p>
           <div class="subheading mb-3">Competitions</div>
           <p>Participant in Lucid Programming Competition 2022 & 2023 with students from all across the country including BYU, Duke, UNC, and more</p>
-          <div class="subheading mb-3">Future Studies</div>
+          <div class="subheading mb-3">Studies</div>
           <p>Currently studying compiler construction, algorithms under uncertainty, and scientific computing.</p>
         </div>
       </section>
