--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
           <h1 class="mb-0">Ryan
             <span class="text-primary">Christensen</span>
           </h1>
-          <div class="subheading mb-5">390E 300S Apt 5 · Logan, UT 84321 · (435) 660-6987 ·
+          <div class="subheading mb-5">702E 1400N Apt 4 · Logan, UT 84321 · (435) 660-6987 ·
             <a href="mailto:name@email.com">ryanc3412@gmail.com</a>
           </div>
-          <p class="mb-5">As a Junior computer science student at Utah State University, I am passionate about developing innovative software. I have a strong understanding of data structures and algorithms, gained through my coursework and self-study. I have skills in a variety of programming languages, including Python, Java, and Kotlin. I am also proficient in using Git and GitHub for code management and collaboration. </p>
+          <p class="mb-5">As a Senior computer science student at Utah State University, I am passionate about developing innovative software. I have a strong understanding of data structures and algorithms, gained through my coursework and self-study. I have skills in a variety of programming languages, including Python, Java, and Kotlin. I am also proficient in using Git and GitHub for code management and collaboration. </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/ryan-k-christensen/">
